เพิ่มโครงสร้างข้อมูลหลัก ClaimCase และฟังก์ชันที่เกี่ยวข้อง
- เพิ่มคลาส ClaimCase เพื่อจัดการอินสแตนซ์ ClaimTicket หลายรายการภายใต้หมายเลขติดตามเดียว

- พัฒนาเมธอด add_ticket เพื่อบังคับใช้กฎทางธุรกิจและอัปเดตค่าชดเชยรวม

- ปรับปรุงกรณีทดสอบเพื่อตรวจสอบความถูกต้องของฟังก์ชันการเพิ่มตั๋วหลายรายการลงใน ClaimCase เดียวกัน

- อัปเดตโค้ดและการทดสอบที่มีอยู่เพื่อให้สอดคล้องกับโครงสร้างข้อมูลหลักใหม่

--- a/Lesson_4/pd_04_01.ipynb
+++ b/Lesson_4/pd_04_01.ipynb
@@ -366,6 +366,134 @@
     "    new_price = Money(amount=950.00, currency=\"THB\")\n",
     "    my_ticket.update_compensation(new_price)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4cf9d9a",
+   "metadata": {},
+   "source": [
+    "# 📦 บทที่ 4.6: แอ็กเกรเกต - การมัดรวมข้อมูล (Aggregate)\n",
+    "---\n",
+    "\n",
+    "ในโลกความจริง ข้อมูลมันไม่ได้อยู่อย่างโดดเดี่ยวครับ เหมือนที่ User บอกว่า \"สินค้า 1 ชิ้น (Tracking เดียวกัน) อาจมีใบเคลมหลายใบ\" \n",
+    "\n",
+    "เราจึงต้องมี **\"ตระกร้า\"** สำหรับเก็บใบเคลมเหล่านั้นรวมกัน เราเรียกตระกร้านี้ว่า **Aggregate** และเรียกตัวหลักที่คุมตระกร้านี้ว่า **Aggregate Root (หัวหน้ากลุ่ม)** ครับ\n",
+    "\n",
+    "| คำศัพท์ (Technical Term) | คำอ่านไทย (Pronunciation) | ความหมาย (Translation/Definition) |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Aggregate** | แอ็ก-เกร-เกต | **กลุ่มของวัตถุ** ที่ต้องอยู่ด้วยกันเพื่อทำงานให้สำเร็จตามกฎธุรกิจ |\n",
+    "| **Aggregate Root** | แอ็ก-เกร-เกต รูท | **ตัวแทนกลุ่ม** เป็นจุดเดียวที่อนุญาตให้คนภายนอกติดต่อด้วย (ในที่นี้คือ Case การเคลม) |\n",
+    "| **Invariance** | อิน-แว-เรียนต์ | **กฎเหล็กที่ต้องรักษา** (เช่น ใน 1 Case ทุกใบเคลมต้องมีเลข Tracking เดียวกัน) |\n",
+    "| **Boundary** | บาวน์-ดารี | **ขอบเขต** สิ่งที่บอกว่าอะไรควรอยู่ในตระกร้านี้ อะไรควรอยู่นอก |\n",
+    "\n",
+    "**🔍 กฎของ ClaimCase (Aggregate) ของป๋า:**\n",
+    "1. **ยึด Tracking เป็นหลัก:** ใน 1 Case จะมีได้หลายใบเคลม แต่ทุกใบต้องเป็นของ Tracking นี้เท่านั้น\n",
+    "2. **คุมยอดรวม:** ตระกร้านี้ต้องตอบได้ว่า \"รวมแล้ว Case นี้เคลมไปกี่บาท\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "18ae1996",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -----------------------------------------\n",
+    "# Test Cases สำหรับ ClaimCase (Aggregate)\n",
+    "# -----------------------------------------\n",
+    "\n",
+    "def test_add_multiple_tickets_to_same_case():\n",
+    "    # 1. เตรียม Tracking เดียวกัน (กุญแจหลัก)\n",
+    "    tn = TrackingNumber(value=\"TH1234567890\")\n",
+    "    \n",
+    "    # 2. สร้าง Aggregate Root (ตระกร้า)\n",
+    "    claim_case = ClaimCase(tracking_number=tn)\n",
+    "\n",
+    "    # 3. เตรียมใบเคลม 2 ใบ (จำลองว่าแจ้งซ้ำ 2 ครั้ง)\n",
+    "    ticket1 = ClaimTicket(\n",
+    "        ticket_id=TicketId(value=\"CMP-1001\"),\n",
+    "        tracking_number=tn,\n",
+    "        compensation_amount=Money(amount=500, currency=\"THB\")\n",
+    "    )\n",
+    "    ticket2 = ClaimTicket(\n",
+    "        ticket_id=TicketId(value=\"CMP-1002\"),\n",
+    "        tracking_number=tn,\n",
+    "        compensation_amount=Money(amount=300, currency=\"THB\")\n",
+    "    )\n",
+    "\n",
+    "    # 4. ใส่ใบเคลมลงในตระกร้า\n",
+    "    claim_case.add_ticket(ticket1)\n",
+    "    claim_case.add_ticket(ticket2)\n",
+    "\n",
+    "    # 5. ตรวจสอบ: ในตระกร้าต้องมี 2 ใบ และยอดรวมต้องเป็น 800 บาท\n",
+    "    assert len(claim_case.tickets) == 2\n",
+    "    assert claim_case.total_compensation.amount == 800.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bea57e67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ เพิ่ม CMP-01 สำเร็จ! ยอดรวมเคสนี้: 100.00 THB\n",
+      "✅ เพิ่ม CMP-02 สำเร็จ! ยอดรวมเคสนี้: 300.00 THB\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ClaimCase(BaseModel):\n",
+    "    \"\"\"\n",
+    "    Aggregate Root: ตระกร้าคุมใบเคลมของสินค้า 1 ชิ้น\n",
+    "    \"\"\"\n",
+    "    tracking_number: TrackingNumber\n",
+    "    # รายการใบเคลมที่อยู่ในตระกร้านี้ (เริ่มต้นเป็น List ว่าง)\n",
+    "    tickets: list[ClaimTicket] = Field(default_factory=list)\n",
+    "    \n",
+    "    # สถานะเงินรวม (Value Object ที่ป๋าทำไว้)\n",
+    "    # เริ่มต้นที่ 0 THB\n",
+    "    total_compensation: Money = Field(\n",
+    "        default_factory=lambda: Money(amount=0, currency=\"THB\")\n",
+    "    )\n",
+    "\n",
+    "    def add_ticket(self, ticket: ClaimTicket):\n",
+    "        \"\"\"\n",
+    "        กฎธุรกิจ: \n",
+    "        1. ตรวจสอบว่า Tracking ตรงกันไหม\n",
+    "        2. เพิ่มลง List\n",
+    "        3. อัปเดตยอดเงินรวม\n",
+    "        \"\"\"\n",
+    "        # เช็กกฎ Invariant: ห้ามเอาใบเคลมคนละสินค้ามาปนกัน\n",
+    "        if ticket.tracking_number.value != self.tracking_number.value:\n",
+    "            raise ValueError(\"ป๋าครับ! ใบเคลมนี้มันคนละเลข Tracking กันนะ\")\n",
+    "\n",
+    "        self.tickets.append(ticket)\n",
+    "        \n",
+    "        # อัปเดตยอดรวม (ป๋าเห็นไหมครับ เราเอา Value Object มาคำนวณกันในนี้เลย)\n",
+    "        new_amount = self.total_compensation.amount + ticket.compensation_amount.amount\n",
+    "        self.total_compensation = Money(amount=new_amount, currency=\"THB\")\n",
+    "        \n",
+    "        print(f\"✅ เพิ่ม {ticket.ticket_id.value} สำเร็จ! ยอดรวมเคสนี้: {self.total_compensation}\")\n",
+    "\n",
+    "# --- ลองใช้งานจริง ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    tn = TrackingNumber(value=\"TH1234567890\")\n",
+    "    my_case = ClaimCase(tracking_number=tn)\n",
+    "\n",
+    "    # ลองเพิ่มใบที่ 1\n",
+    "    t1 = ClaimTicket(ticket_id=TicketId(value=\"CMP-01\"), tracking_number=tn, \n",
+    "                     compensation_amount=Money(amount=100, currency=\"THB\"))\n",
+    "    my_case.add_ticket(t1)\n",
+    "\n",
+    "    # ลองเพิ่มใบที่ 2\n",
+    "    t2 = ClaimTicket(ticket_id=TicketId(value=\"CMP-02\"), tracking_number=tn, \n",
+    "                     compensation_amount=Money(amount=200, currency=\"THB\"))\n",
+    "    my_case.add_ticket(t2)"
+   ]
   }
  ],
  "metadata": {
