--- a/Lesson_4/pd_04_01_test.ipynb
+++ b/Lesson_4/pd_04_01_test.ipynb
@@ -205,6 +205,99 @@
     "        print(f'{e}') \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "03c7ad46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_add_mutltiple_tickets_to_seme_case():\n",
+    "    tn = TrackingNumber(value='TH1234567888')\n",
+    "\n",
+    "    claim_case = ClaimCase(tracking_number=tn)\n",
+    "\n",
+    "    ticket1 = ClaimTicket(\n",
+    "        ticket_id=TicketId(value='CMP-1001'),\n",
+    "        tracking_number=tn,\n",
+    "        compensation_amount=Money(amount=500, currency='THB')\n",
+    "    )\n",
+    "    \n",
+    "    ticket2 = ClaimTicket(\n",
+    "        ticket_id=TicketId(value='CMP-1002'),\n",
+    "        tracking_number=tn,\n",
+    "        compensation_amount=Money(amount=300, currency='THB' )\n",
+    "    )\n",
+    "\n",
+    "    claim_case.add_ticket(ticket1)\n",
+    "    claim_case.add_ticket(ticket2)\n",
+    "\n",
+    "    assert len(claim_case.tickets) == 2\n",
+    "    assert claim_case.total_compensation.amount == 800.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d9a21a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "เพิ่ม CMP-01 สำเร็จ!\n",
+      "ยอยรวมเคสนี้: 100.00 THB\n",
+      "เพิ่ม CMP-02 สำเร็จ!\n",
+      "ยอยรวมเคสนี้: 300.00 THB\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ClaimCase(BaseModel):\n",
+    "    \"\"\"\n",
+    "    Aggregate Root: ตระกร้าคุมใบเคลมของสินค้า 1 ชิ้น\n",
+    "    \"\"\"\n",
+    "    tracking_number: TrackingNumber\n",
+    "    tickets: list[ClaimTicket] = Field(default_factory=list)\n",
+    "\n",
+    "    total_compensation: Money = Field(\n",
+    "        default_factory=lambda: Money(amount=0, currency='THB')\n",
+    "    )\n",
+    "\n",
+    "    def add_ticket(self, ticket: ClaimTicket):\n",
+    "        \"\"\"\n",
+    "        กฎธุรกิจ: \n",
+    "        1. ตรวจสอบว่า Tracking ตรงกันไหม\n",
+    "        2. เพิ่มลง List\n",
+    "        3. อัปเดตยอดเงินรวม\n",
+    "        \"\"\"\n",
+    "        if ticket.tracking_number.value != self.tracking_number.value:\n",
+    "            raise ValueError('ใบเคลมนี้คนละเลข Tracking กันนะ')\n",
+    "        \n",
+    "        self.tickets.append(ticket)\n",
+    "\n",
+    "        new_amount = self.total_compensation.amount + ticket.compensation_amount.amount\n",
+    "        self.total_compensation = Money(amount=new_amount, currency='THB')\n",
+    "\n",
+    "        print(f'เพิ่ม {ticket.ticket_id.value} สำเร็จ!')\n",
+    "        print(f'ยอยรวมเคสนี้: {self.total_compensation}')\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    tn = TrackingNumber(value='TH1234567890')\n",
+    "    my_case = ClaimCase(tracking_number=tn)\n",
+    "\n",
+    "    t1 = ClaimTicket(ticket_id=TicketId(value='CMP-01'), tracking_number=tn,\n",
+    "                   compensation_amount=Money(amount=100, currency='THB'))\n",
+    "    \n",
+    "    my_case.add_ticket(t1)\n",
+    "\n",
+    "    t2 = ClaimTicket(ticket_id=TicketId(value='CMP-02'), tracking_number=tn,\n",
+    "                    compensation_amount=Money(amount=200, currency='THB'))\n",
+    "    my_case.add_ticket(t2)"
+   ]
   }
  ],
  "metadata": {
