ปรับใช้รูปแบบ Repository สำหรับกรณีการเรียกร้องค่าสินไหมทดแทน โดยมีตัวเลือกการจัดเก็บข้อมูลในหน่วยความจำและ Pandas เพิ่มการทดสอบสำหรับฟังก์ชันการทำงานของ Repository และการบูรณาการกับข้อมูล Excel

--- a/Lesson_4/pd_04_01.ipynb
+++ b/Lesson_4/pd_04_01.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a6d25284",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6493574e",
    "metadata": {},
    "outputs": [],
@@ -184,10 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "36bc56cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ สร้างเงินสำเร็จ: 1,477.50 THB\n",
+      "❌ ระบบดักจับเงินติดลบได้: 1 validation error for Money\n",
+      "amount\n",
+      "  Input should be greater than or equal to 0 [type=greater_than_equal, input_value=-50, input_type=int]\n",
+      "    For further information visit https://errors.pydantic.dev/2.12/v/greater_than_equal\n"
+     ]
+    }
+   ],
    "source": [
     "from pydantic import BaseModel, Field, field_validator\n",
     "\n",
@@ -276,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "44a1af01",
    "metadata": {},
    "outputs": [],
@@ -317,10 +329,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fb1d08e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📦 ใบเคลมถูกสร้าง: CMP-1001\n",
+      "💰 ยอดเดิม: 886.26 THB\n",
+      "📢 อัปเดตยอดเงินเป็น 950.00 THB (Version: 2)\n"
+     ]
+    }
+   ],
    "source": [
     "from pydantic import BaseModel, Field\n",
     "\n",
@@ -393,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "18ae1996",
    "metadata": {},
    "outputs": [],
@@ -432,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "bea57e67",
    "metadata": {},
    "outputs": [
@@ -493,6 +515,324 @@
     "    t2 = ClaimTicket(ticket_id=TicketId(value=\"CMP-02\"), tracking_number=tn, \n",
     "                     compensation_amount=Money(amount=200, currency=\"THB\"))\n",
     "    my_case.add_ticket(t2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab931854",
+   "metadata": {},
+   "source": [
+    "# 🗄️ บทที่ 4.7: เรโพซิทอรี - ลิ้นชักเก็บข้อมูล (Repository Pattern)\n",
+    "---\n",
+    "\n",
+    "ในหลักการ Clean Architecture และ DDD ตัว Domain (กฎธุรกิจที่เราเพิ่งเขียนไป) จะ **ไม่รู้จัก Pandas และไม่รู้จัก Excel เลย** ครับ! มันรู้แค่ว่า \"ฉันมีลิ้นชักให้เก็บของนะ ส่วนลิ้นชักนั้นข้างในจะเป็นไม้ หรือเป็นเหล็ก (จะเป็น Excel หรือ SQL) ฉันไม่สน\"\n",
+    "\n",
+    "การทำแบบนี้เรียกว่าการซ่อนความซับซ้อนครับ\n",
+    "\n",
+    "| คำศัพท์ (Technical Term) | คำอ่านไทย (Pronunciation) | ความหมาย (Translation/Definition) |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Repository** | เร-โพ-ซิ-ทอ-รี | **คลังเก็บข้อมูล** ทำหน้าที่บันทึกและดึง Aggregate ออกมา |\n",
+    "| **Abstraction** | แอ็บ-สแตรก-ชัน | **การซ่อนรายละเอียด** ให้ Domain รู้แค่ว่าจะเซฟยังไง แต่ไม่ต้องรู้ว่าโค้ดเซฟลงไฟล์เขียนยังไง |\n",
+    "| **Persistence** | เพอร์-ซิส-เทนซ์ | **การทำให้ข้อมูลคงอยู่** (ไม่หายไปเมื่อปิดโปรแกรม) |\n",
+    "| **In-Memory** | อิน-เมม-โม-รี | **การเก็บในหน่วยความจำ** (ใช้สำหรับทดสอบ TDD ให้รันไวๆ โดยไม่ต้องเปิดไฟล์จริง) |\n",
+    "\n",
+    "**🔍 กฎของ Repository ของเดฟป๋า:**\n",
+    "1. **Save:** ต้องรับ `ClaimCase` (Aggregate) ทั้งก้อนไปเซฟได้\n",
+    "2. **Get:** ต้องเอา `TrackingNumber` ไปค้นหา แล้วคืนค่ากลับมาเป็น `ClaimCase` ได้"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f43f9f83",
+   "metadata": {},
+   "source": [
+    "📝 ส่วนที่ 2: TDD Phase 1 - RED (เขียนเทสเพื่อลองใช้ลิ้นชัก)\n",
+    "เดฟป๋าลองเขียนเทสดูครับ เราจะจำลองการสร้างเคส แล้วจับยัดลงลิ้นชัก จากนั้นลองค้นหาดูว่าลิ้นชักมันคืนของมาให้เราถูกต้องไหม"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "763526f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -----------------------------------------\n",
+    "# Test Cases สำหรับ Repository\n",
+    "# -----------------------------------------\n",
+    "\n",
+    "def test_repository_can_save_and_retrieve_case():\n",
+    "    # 1. สร้างลิ้นชักจำลอง (In-Memory) สำหรับเทส\n",
+    "    repo = InMemoryClaimRepository()\n",
+    "    \n",
+    "    # 2. สร้างเคสจำลอง\n",
+    "    tn = TrackingNumber(value=\"TH1234567890\")\n",
+    "    claim_case = ClaimCase(tracking_number=tn)\n",
+    "    \n",
+    "    # ลองใส่ใบเคลมเข้าไป 1 ใบ\n",
+    "    ticket = ClaimTicket(\n",
+    "        ticket_id=TicketId(value=\"CMP-999\"),\n",
+    "        tracking_number=tn,\n",
+    "        compensation_amount=Money(amount=1000, currency=\"THB\")\n",
+    "    )\n",
+    "    claim_case.add_ticket(ticket)\n",
+    "\n",
+    "    # 3. สั่งเซฟลงลิ้นชัก!\n",
+    "    repo.save(claim_case)\n",
+    "\n",
+    "    # 4. สั่งค้นหาจากลิ้นชักด้วยเลข Tracking\n",
+    "    retrieved_case = repo.get_by_tracking(tn)\n",
+    "\n",
+    "    # 5. ตรวจสอบว่าหาเจอไหม และข้อมูลครบหรือเปล่า\n",
+    "    assert retrieved_case is not None # ต้องไม่เป็นค่าว่าง\n",
+    "    assert retrieved_case.tracking_number.value == \"TH1234567890\"\n",
+    "    assert len(retrieved_case.tickets) == 1\n",
+    "    assert retrieved_case.total_compensation.amount == 1000.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "add25b3a",
+   "metadata": {},
+   "source": [
+    "📝 ส่วนที่ 3: TDD Phase 2 - GREEN (เขียนโค้ดลิ้นชักจำลอง)\n",
+    "เราจะสร้าง InMemoryClaimRepository ขึ้นมาเพื่อทำให้เทสผ่านก่อนครับ (ยังไม่เอา Pandas มาใช้นะครับ เพราะหลักการ TDD เราต้องเทสให้ระบบ Logic ผ่านก่อนไปยุ่งกับไฟล์จริง)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "30ca7d4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "💾 [DB จำลอง] บันทึกเคสของพัสดุ TH9999999999 ลงลิ้นชักเรียบร้อย!\n",
+      "🔍 [DB จำลอง] ค้นพบเคสของพัสดุ TH9999999999\n",
+      "ยอดรวมในระบบตอนนี้: 0.00 THB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "# นี่คือ \"หน้าตา\" ของลิ้นชักที่ระบบเราต้องการ (Interface)\n",
+    "class ClaimRepository:\n",
+    "    def save(self, claim_case: ClaimCase):\n",
+    "        raise NotImplementedError\n",
+    "        \n",
+    "    def get_by_tracking(self, tracking: TrackingNumber) -> Optional[ClaimCase]:\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "# นี่คือ \"ลิ้นชักของปลอม\" ที่เอาไว้ใช้รันเทสให้ไวปรู๊ดปร๊าด (In-Memory)\n",
+    "class InMemoryClaimRepository(ClaimRepository):\n",
+    "    def __init__(self):\n",
+    "        # ใช้ Dictionary ของ Python เป็นฐานข้อมูลจำลองไปก่อน\n",
+    "        self._db = {} \n",
+    "\n",
+    "    def save(self, claim_case: ClaimCase):\n",
+    "        # เอาเลข Tracking เป็น Key และเอา Aggregate ทั้งก้อนเป็น Value\n",
+    "        self._db[claim_case.tracking_number.value] = claim_case\n",
+    "        print(f\"💾 [DB จำลอง] บันทึกเคสของพัสดุ {claim_case.tracking_number.value} ลงลิ้นชักเรียบร้อย!\")\n",
+    "\n",
+    "    def get_by_tracking(self, tracking: TrackingNumber) -> Optional[ClaimCase]:\n",
+    "        # ค้นหาใน Dictionary\n",
+    "        found_case = self._db.get(tracking.value)\n",
+    "        if found_case:\n",
+    "            print(f\"🔍 [DB จำลอง] ค้นพบเคสของพัสดุ {tracking.value}\")\n",
+    "        else:\n",
+    "            print(f\"❌ [DB จำลอง] ไม่พบพัสดุ {tracking.value} ในระบบ\")\n",
+    "        return found_case\n",
+    "\n",
+    "# --- ลองใช้งานจริง ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    # สร้างลิ้นชัก\n",
+    "    repo = InMemoryClaimRepository()\n",
+    "    \n",
+    "    # สร้างข้อมูลและเซฟ\n",
+    "    tn1 = TrackingNumber(value=\"TH9999999999\")\n",
+    "    case1 = ClaimCase(tracking_number=tn1)\n",
+    "    repo.save(case1)\n",
+    "    \n",
+    "    # ลองค้นหาดู\n",
+    "    result = repo.get_by_tracking(TrackingNumber(value=\"TH9999999999\"))\n",
+    "    print(f\"ยอดรวมในระบบตอนนี้: {result.total_compensation}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f78267df",
+   "metadata": {},
+   "source": [
+    "# 🧪 บทที่ 4.8.1: อินทิเกรชันเทส - ทดสอบมือหยิบไฟล์ (Integration Test)\n",
+    "---\n",
+    "\n",
+    "ในขณะที่เทสก่อนหน้านี้เราทดสอบแค่ \"สมอง\" (Domain) แต่เทสนี้เราจะทดสอบ **\"มือ\"** (Adapter) ครับ ว่ามันหยิบของจากไฟล์ Excel แล้วเอามาส่งให้สมองได้ถูกต้องจริงไหม\n",
+    "\n",
+    "| คำศัพท์ (Technical Term) | คำอ่านไทย (Pronunciation) | ความหมาย (Translation/Definition) |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Integration Test** | อิน-ทิ-เกร-ชัน เทส | **การทดสอบการเชื่อมต่อ** ระหว่างโปรแกรมของเรากับระบบภายนอก (เช่น ไฟล์ Excel) |\n",
+    "| **Mock File** | ม็อก ไฟล์ | **ไฟล์จำลอง** ที่สร้างขึ้นมาเพื่อใช้ในการรันเทสโดยเฉพาะ |\n",
+    "| **Data Mapping Test** | ดาต้า แมพ-พิง เทส | การตรวจสอบว่าคอลัมน์ใน Excel ถูกแปลงเป็น Object ได้ถูกช่องไหม |\n",
+    "| **Fixtures** | ฟิกซ์-เจอร์ | การเตรียมสภาพแวดล้อมก่อนเริ่มเทส (เช่น การสร้างไฟล์จำลองทิ้งไว้) |\n",
+    "\n",
+    "**🔍 สิ่งที่เราจะพิสูจน์ในเทสนี้:**\n",
+    "1. ถ้าส่งไฟล์ Excel ให้ Repository มันต้องอ่านได้โดยไม่ Error\n",
+    "2. ข้อมูลที่อ่านออกมา ต้องถูกแปลงเป็น `ClaimCase` ไม่ใช่เป็นแค่ตาราง Pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "493bd154",
+   "metadata": {},
+   "source": [
+    "💻 ส่วนที่ 2: TDD Phase 1 - RED (เขียนเทสให้พังก่อน)\n",
+    "เดฟป๋าเพิ่มโค้ดนี้ลงในไฟล์เทสครับ มันจะพัง (RED) เพราะเรายังไม่ได้เขียนตัว PandasClaimRepository จริงๆ ใน 4.8 ครับ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fe956fd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytest\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# -----------------------------------------\n",
+    "# Integration Test สำหรับ Pandas Repository\n",
+    "# -----------------------------------------\n",
+    "\n",
+    "def test_pandas_repo_can_load_from_real_excel():\n",
+    "    # 1. [Arrange] เตรียมไฟล์ Excel จำลองสำหรับเทส\n",
+    "    test_file = \"../Lesson_4/test_integration.xlsx\"\n",
+    "    mock_df = pd.DataFrame({\n",
+    "        'complaint_ticket_id': ['TKT-001'],\n",
+    "        'tracking_no': ['TH999999'],\n",
+    "        'compensation_final_amt': [500.0]\n",
+    "    })\n",
+    "    mock_df.to_excel(test_file, index=False)\n",
+    "\n",
+    "    try:\n",
+    "        # 2. [Act] ลองใช้ Repository อ่านไฟล์นี้\n",
+    "        repo = PandasClaimRepository(test_file)\n",
+    "        results = repo.get_all_cases()\n",
+    "\n",
+    "        # 3. [Assert] ตรวจสอบว่าของที่ได้ออกมา \"ไม่ใช่แค่ตาราง\" แต่เป็น \"Object\"\n",
+    "        assert len(results) == 1\n",
+    "        assert isinstance(results[0], ClaimCase) # ต้องเป็น Class ClaimCase\n",
+    "        assert results[0].tracking_number.value == \"TH999999\"\n",
+    "        assert results[0].total_compensation.amount == 500.0\n",
+    "\n",
+    "    finally:\n",
+    "        # ลบไฟล์ทิ้งหลังเทสเสร็จ (รักษาความสะอาด)\n",
+    "        if os.path.exists(test_file):\n",
+    "            os.remove(test_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "164a7d75",
+   "metadata": {},
+   "source": [
+    "🔍 อธิบายสิ่งที่เทสนี้ตรวจสอบ (Why this test?)\n",
+    "isinstance(results[0], ClaimCase): บรรทัดนี้สำคัญมากครับป๋า! เราไม่ได้ตรวจสอบแค่ว่า \"มีข้อมูลไหม\" แต่เราตรวจสอบว่า \"ข้อมูลนั้นถูกแปลงร่าง (Transform) จากแถวใน Excel มาเป็น Aggregate หรือยัง\"\n",
+    "\n",
+    "results[0].total_compensation.amount == 500.0: ตรวจสอบว่า amount = row.get(..., 0) ที่ป๋าสงสัยตะกี้เนี่ย มันทำงานได้ถูกต้องจริงไหม ถ้าในไฟล์มี 500 มันต้องได้ 500 ไม่ใช่ได้ 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3a3dc61",
+   "metadata": {},
+   "source": [
+    "# 🔌 บทที่ 4.8: อะแดปเตอร์ - ตัวเชื่อมโลกความจริง (The Adapter Layer)\n",
+    "---\n",
+    "\n",
+    "ในสถาปัตยกรรมแบบ Clean Architecture ตัว **Adapter** (อะ-แดป-เตอร์) คือส่วนที่ติดต่อกับภายนอก (เช่น ไฟล์ Excel ของป๋า) แล้วแปลงข้อมูลเหล่านั้นให้กลายเป็นสิ่งที่ Domain เข้าใจครับ\n",
+    "\n",
+    "| คำศัพท์ (Technical Term) | คำอ่านไทย (Pronunciation) | ความหมาย (Translation/Definition) |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Adapter Layer** | อะ-แดป-เตอร์ เล-เยอร์ | **ชั้นตัวเชื่อม** ทำหน้าที่แปลงข้อมูลจากภายนอกเข้าสู่ระบบภายใน |\n",
+    "| **Data Transformation** | ดาต้า แทรนส์-ฟอร์-เม-ชัน | **การแปลงรูปข้อมูล** (เช่น แปลงจากแถวใน Excel ให้กลายเป็น Money Object) |\n",
+    "| **Glue Code** | กลู โค้ด | **โค้ดกาว** โค้ดที่ทำหน้าที่เชื่อมส่วนที่ต่างกันเข้าด้วยกัน |\n",
+    "| **Dependency Injection** | ดี-เพน-เดน-ซี อิน-เจก-ชัน | การส่ง \"เครื่องมือ\" (เช่น ลิ้นชัก) เข้าไปให้ระบบใช้ โดยที่ระบบไม่ต้องสร้างเอง |\n",
+    "\n",
+    "**🔍 หน้าที่ของ Pandas ในบทนี้:**\n",
+    "ป๋าจะเห็นว่า Pandas จะไม่ใช่ \"พระเอก\" อีกต่อไป แต่มันจะเป็น **\"คนขับรถขนส่ง\"** ที่ไปขนข้อมูลจากไฟล์ Excel มาส่งที่หน้าประตูบ้าน แล้วเราจะใช้โค้ดของเราเปลี่ยนข้อมูลเหล่านั้นให้กลายเป็น `ClaimCase` ครับ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6566032d",
+   "metadata": {},
+   "source": [
+    "💻 ส่วนที่ 2: โค้ดของจริง! การเอา Pandas มาต่อกับ Domain (Code Cell)\n",
+    "นี่คือจุดที่ป๋าจะเห็นว่าทำไมเราต้องเขียน Value Object ไว้เยอะแยะครับ เพราะตอนเราอ่าน Excel มา เราจะ \"ห่อ\" (Wrap) ข้อมูลเหล่านั้นทันที"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5b67bdaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ เพิ่ม CMP-1001 สำเร็จ! ยอดรวมเคสนี้: 0.00 THB\n",
+      "✅ เพิ่ม CMP-1002 สำเร็จ! ยอดรวมเคสนี้: 0.00 THB\n",
+      "✅ เพิ่ม CMP-1003 สำเร็จ! ยอดรวมเคสนี้: 0.00 THB\n",
+      "✅ เพิ่ม CMP-1004 สำเร็จ! ยอดรวมเคสนี้: 0.00 THB\n",
+      "✅ เพิ่ม CMP-1005 สำเร็จ! ยอดรวมเคสนี้: 0.00 THB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "class PandasClaimRepository(ClaimRepository): # สืบทอดมาจากพิมพ์เขียวลิ้นชัก\n",
+    "    def __init__(self, file_path: str):\n",
+    "        self.file_path = file_path\n",
+    "\n",
+    "    def get_all_cases(self) -> list[ClaimCase]:\n",
+    "        # 1. ใช้ Pandas อ่านไฟล์ (ทบทวนบทที่ 1)\n",
+    "        df = pd.read_excel(self.file_path)\n",
+    "        \n",
+    "        cases = []\n",
+    "        for index, row in df.iterrows():\n",
+    "            # 2. กระบวนการ \"แปลงร่าง\" (Transformation)\n",
+    "            # ป๋าดูนะครับ เราเอาข้อมูลดิบจาก row มาห่อด้วย Value Object ทันที!\n",
+    "            tn = TrackingNumber(value=row['tracking_no'])\n",
+    "            tid = TicketId(value=row['complaint_ticket_id'])\n",
+    "            \n",
+    "            # สมมติเราดึงราคามา (ถ้าไม่มีให้เป็น 0)\n",
+    "            amount = row.get('compensation_final_amt', 0)\n",
+    "            money = Money(amount=amount, currency=\"THB\")\n",
+    "\n",
+    "            # 3. สร้าง Entity และ Aggregate\n",
+    "            ticket = ClaimTicket(\n",
+    "                ticket_id=tid, \n",
+    "                tracking_number=tn, \n",
+    "                compensation_amount=money\n",
+    "            )\n",
+    "            \n",
+    "            # สร้างตระกร้า (Case) แล้วใส่ใบเคลมลงไป\n",
+    "            new_case = ClaimCase(tracking_number=tn)\n",
+    "            new_case.add_ticket(ticket)\n",
+    "            \n",
+    "            cases.append(new_case)\n",
+    "            \n",
+    "        return cases\n",
+    "\n",
+    "# --- ลองใช้งานกับไฟล์ของป๋า ---\n",
+    "repo = PandasClaimRepository(\"../Lesson_4/mock_claim_data.xlsx\")\n",
+    "all_cases = repo.get_all_cases()"
    ]
   }
  ],
