--- a/Lesson_4/pd_04_01_test.ipynb
+++ b/Lesson_4/pd_04_01_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "ae7f25e7",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "47223791",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "96d13874",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "8e67e033",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "1aa9edd4",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "ff23ca59",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "03c7ad46",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "5d9a21a5",
    "metadata": {},
    "outputs": [
@@ -297,6 +297,174 @@
     "    t2 = ClaimTicket(ticket_id=TicketId(value='CMP-02'), tracking_number=tn,\n",
     "                    compensation_amount=Money(amount=200, currency='THB'))\n",
     "    my_case.add_ticket(t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "70959d7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_repository_can_save_and_retrieve_case():\n",
+    "    repo = InMemoryClaimRepository()\n",
+    "\n",
+    "    tn = TrackingNumber(value='TH1234567890')\n",
+    "    claim_case = ClaimCase(tracking_number=tn)\n",
+    "\n",
+    "    ticket = ClaimTicket(\n",
+    "        ticket_id=TicketId(value='CMP-999'),\n",
+    "        tracking_number=tn,\n",
+    "        compensation_amount=Money(amount=1000, currency='THB')\n",
+    "    )\n",
+    "    claim_case.add_ticket(ticket)\n",
+    "\n",
+    "    repo.save(claim_case)\n",
+    "\n",
+    "    retrived_case = repo.get_by_tracking(tn)\n",
+    "\n",
+    "    assert retrived_case is not None \n",
+    "    assert retrived_case.tracking_number.value == 'TH1234567890'\n",
+    "    assert len(retrived_case.tickets) == 1\n",
+    "    assert retrived_case.total_compensation.amount == 1000.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "c708711b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DB จำลอง] บันทึกเคสของพัสดุ TH9999999999 ลงลิ้นชักเรียบร้อย\n",
+      "[DB จำลอง] ค้นพบเคสของพัสดุ TH9999999999\n",
+      "ยอดรวมในระบบตอนนี้: 0.00 THB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "class ClaimRepository:\n",
+    "    def save(self, claim_case: ClaimCase):\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    def get_by_tracking(self, tracking: TrackingNumber) -> Optional[ClaimCase]:\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "class InMemoryClaimRepository(ClaimRepository):\n",
+    "    def __init__(self):\n",
+    "        self.__db = {}\n",
+    "\n",
+    "    def save(self, claim_case: ClaimCase):\n",
+    "        self.__db[claim_case.tracking_number.value] = claim_case\n",
+    "        print(f'[DB จำลอง] บันทึกเคสของพัสดุ {claim_case.tracking_number.value} ลงลิ้นชักเรียบร้อย')\n",
+    "\n",
+    "    def get_by_tracking(self, tracking: TrackingNumber) -> Optional[ClaimCase]:\n",
+    "        found_case = self.__db.get(tracking.value)\n",
+    "        if found_case:\n",
+    "            print(f'[DB จำลอง] ค้นพบเคสของพัสดุ {tracking.value}')\n",
+    "        else:\n",
+    "            print(f'[DB จำลอง] ไม่พบพัสดุ {tracking.value} ในระบบ')\n",
+    "        return found_case\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    repo = InMemoryClaimRepository()\n",
+    "\n",
+    "    tn1 = TrackingNumber(value='TH9999999999')\n",
+    "    case1 = ClaimCase(tracking_number=tn1)\n",
+    "    repo.save(case1)\n",
+    "\n",
+    "    result = repo.get_by_tracking(TrackingNumber(value='TH9999999999'))\n",
+    "    print(f'ยอดรวมในระบบตอนนี้: {result.total_compensation}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2a887b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import pytest\n",
+    "import os\n",
+    "\n",
+    "def test_pandas_repo_can_load_from_real_excel():\n",
+    "    test_file = '../Lesson_4/test_integration.xlsx'\n",
+    "    mock_df = pd.DataFrame({\n",
+    "        'complaint_ticket_id': ['TKT-001'],\n",
+    "        'tracking_no': ['TH999999'],\n",
+    "        'compensation_final_amt': [500.0]\n",
+    "    })\n",
+    "    mock_df.to_excel(test_file, index=False)\n",
+    "\n",
+    "    try:\n",
+    "        repo = pandasClaimRepository(test_file)\n",
+    "        results = repo.get_all_cases()\n",
+    "\n",
+    "        assert len(result) == 1\n",
+    "        assert isinstance(result[0], ClaimCase) \n",
+    "        assert result[0].tracking_number.value == 'TH999999'\n",
+    "        assert result[0].total_compensation.amount == 500.0\n",
+    "\n",
+    "    finally:\n",
+    "        if os.path.exists(test_file):\n",
+    "            os.remove(test_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a71f2129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "class PandasClaimRepository(ClaimRepository):\n",
+    "    def __init__(self, file_path: str):\n",
+    "        self.file_path = file_path\n",
+    "\n",
+    "    def get_all_cases(self) -> list[ClaimCase]:\n",
+    "        df = pd.read_excel(self.file_path)\n",
+    "\n",
+    "        cases = []\n",
+    "        for index, row in df.iterrows():\n",
+    "            tn = TrackingNumber(value=row['tracking_no'])\n",
+    "            tid = TicketId(value=row['complaint_ticket_id'])\n",
+    "\n",
+    "            amount = row.get('complaint_final_amt', 0)\n",
+    "            money = Money(amount=amount, currency='THB')\n",
+    "\n",
+    "            ticket = ClaimCase(\n",
+    "                ticket_id = tid,\n",
+    "                tracking_number = tn,\n",
+    "                compensation_amount = money\n",
+    "            )\n",
+    "\n",
+    "            new_case = ClaimCase(tracking_number=tn)\n",
+    "            new_case.add_ticket(ticket=ticket)\n",
+    "\n",
+    "            cases.append(new_case)\n",
+    "\n",
+    "        return cases\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f08e2a75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# repo = PandasClaimRepository('mock_claim_data.xlsx')\n",
+    "# all_cases = repo.get_all_cases()"
    ]
   }
  ],
