เพิ่ม ClaimEnrichmentService สำหรับเพิ่มข้อมูลค่าสินไหมทดแทนและดำเนินการทดสอบที่เกี่ยวข้อง
- พัฒนา ClaimEnrichmentService เพื่อเพิ่มข้อมูลค่าสินไหมทดแทนในกรณีต่างๆ โดยอิงจากหมายเลขติดตาม

- อัปเดต PandasClaimRepository เพื่อจัดการการดึงข้อมูลค่าสินไหมทดแทน

- เพิ่มกรณีทดสอบสำหรับ ClaimEnrichmentService เพื่อตรวจสอบความถูกต้องของตรรกะการเพิ่มข้อมูลและจัดการกรณีพิเศษ
- ปรับปรุง test_value_objects.py ด้วยการทดสอบสำหรับ ClaimEnrichmentService

--- a/Lesson_4/pd_04_01_test.ipynb
+++ b/Lesson_4/pd_04_01_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "ae7f25e7",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "47223791",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "96d13874",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "8e67e033",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "1aa9edd4",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "ff23ca59",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "03c7ad46",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "5d9a21a5",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "70959d7b",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "c708711b",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "2a887b03",
    "metadata": {},
    "outputs": [],
@@ -418,10 +418,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "a71f2129",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "เพิ่ม CMP-1001 สำเร็จ!\n",
+      "ยอยรวมเคสนี้: 0.00 THB\n",
+      "เพิ่ม CMP-1002 สำเร็จ!\n",
+      "ยอยรวมเคสนี้: 0.00 THB\n",
+      "เพิ่ม CMP-1003 สำเร็จ!\n",
+      "ยอยรวมเคสนี้: 0.00 THB\n",
+      "เพิ่ม CMP-1004 สำเร็จ!\n",
+      "ยอยรวมเคสนี้: 0.00 THB\n",
+      "เพิ่ม CMP-1005 สำเร็จ!\n",
+      "ยอยรวมเคสนี้: 0.00 THB\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -440,7 +457,7 @@
     "            amount = row.get('complaint_final_amt', 0)\n",
     "            money = Money(amount=amount, currency='THB')\n",
     "\n",
-    "            ticket = ClaimCase(\n",
+    "            ticket = ClaimTicket(\n",
     "                ticket_id = tid,\n",
     "                tracking_number = tn,\n",
     "                compensation_amount = money\n",
@@ -452,19 +469,63 @@
     "            cases.append(new_case)\n",
     "\n",
     "        return cases\n",
-    "\n",
-    "\n"
+    "try:\n",
+    "    repo = PandasClaimRepository(r'..\\Lesson_4\\mock_claim_data.xlsx')\n",
+    "    all_cases = repo.get_all_cases()\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "f08e2a75",
+   "execution_count": 27,
+   "id": "6f7c2ace",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# repo = PandasClaimRepository('mock_claim_data.xlsx')\n",
-    "# all_cases = repo.get_all_cases()"
+    "def test_claim_enrichment_logic():\n",
+    "    tn = TrackingNumber(value='TH777')\n",
+    "    my_case = ClaimCase(tracking_number=tn)\n",
+    "\n",
+    "    my_case.add_ticket(ClaimTicket(\n",
+    "        ticket_id=TicketId(value='TKT-001'),\n",
+    "        tracking_number=tn,\n",
+    "        compensation_amount=Money(amount=0, currency='THB')\n",
+    "    ))\n",
+    "\n",
+    "    money_map = {\n",
+    "        'TH777': Money(amount=1500.0, currency='THB')\n",
+    "    }\n",
+    "\n",
+    "    service = ClaimEnrichmentService()\n",
+    "    service.enrich(my_case, money_map)\n",
+    "\n",
+    "    assert my_case.total_compensation.amount == 1500.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "dfe85e78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClaimEnrichmentService:\n",
+    "    def enrich(self, claim_case: ClaimCase, compensation_map: dict[str, Money]):\n",
+    "        tracking_val = claim_case.tracking_number.value\n",
+    "\n",
+    "        if tracking_val in compensation_map:\n",
+    "            real_money = compensation_map[tracking_val]\n",
+    "\n",
+    "            for ticket in claim_case.tickets:\n",
+    "                ticket.compensation_amount = real_money\n",
+    "\n",
+    "            new_amt = sum(t.compensation_amount.amount for t in claim_case.tickets)\n",
+    "            claim_case.total_compensation = Money(amount=new_amt, currency='THB')\n",
+    "\n",
+    "            print(f' เติมเงินให้ {tracking_val} สำเร็จ: {real_money}')\n",
+    "        else:\n",
+    "            print(f\"⚠️ ไม่พบยอดเงินสำหรับ {tracking_val} ในข้อมูลไฟล์ 2\")"
    ]
   }
  ],
