เพิ่มฟังก์ชันทดสอบสำหรับกรณีการค้นหาไม่พบและการจัดการยอดเงินเป็น 0 รวมถึงการจัดการกับค่าว่าง (NaN) ในการทดสอบการเคลม

--- a/Lesson_4/pd_04_01_test.ipynb
+++ b/Lesson_4/pd_04_01_test.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8e67e033",
    "metadata": {},
    "outputs": [
@@ -115,6 +115,11 @@
     "    def currency_must_be_uppercase(cls, v):\n",
     "        return v.upper()\n",
     "    \n",
+    "    def add(self, other: 'Money') -> 'Money':\n",
+    "        if self.currency != other.currency:\n",
+    "            raise ValueError(f'Cannot and different currencies: {self.currency} and {other.currency}')\n",
+    "        return Money(amount=self.amount + other.amount, currency=self.currency)\n",
+    "\n",
     "    def __str__(self):\n",
     "        return f'{self.amount:,.2f} {self.currency}'\n",
     "\n",
@@ -505,10 +510,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "dfe85e78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "class ClaimEnrichmentService:\n",
     "    def enrich(self, claim_case: ClaimCase, compensation_map: dict[str, Money]):\n",
@@ -526,6 +543,81 @@
     "            print(f' เติมเงินให้ {tracking_val} สำเร็จ: {real_money}')\n",
     "        else:\n",
     "            print(f\"⚠️ ไม่พบยอดเงินสำหรับ {tracking_val} ในข้อมูลไฟล์ 2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7537c5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_enrichment_tracking_not_found():\n",
+    "    service = ClaimEnrichmentService()\n",
+    "    tn = TrackingNumber(value='TH-NOT-FOUND')\n",
+    "    case = ClaimCase(tracking_number=tn)\n",
+    "\n",
+    "    money_map = {'TH-EXIST': Money(amount=100, currency='THB')}\n",
+    "\n",
+    "    service.enrich(case, money_map)\n",
+    "\n",
+    "    assert case.total_compensation.amount == 0.0\n",
+    "    print(' Sad Path Passed: หาไม่เจอแต่โปรแกรมไม่พัง')\n",
+    "\n",
+    "def test_money_zero_amount():\n",
+    "    zero_money = Money(amount=0, currency='THB')\n",
+    "    assert zero_money.amount == 0\n",
+    "    print('Edge Case Passed: รองรับยอดเงิน 0 บาท')\n",
+    "\n",
+    "\n",
+    "def test_huge_number_of_tickets():\n",
+    "    tn = TrackingNumber(value='TH-BULK')\n",
+    "    case = ClaimCase(tracking_number=tn)\n",
+    "\n",
+    "    for i in range(100):\n",
+    "        t = ClaimTicket(\n",
+    "            ticket_id=TicketId(value=f'TKT-{i}'),\n",
+    "            tracking_number=tn,\n",
+    "            compensation_amount=Money(amount=10, currency='THB')\n",
+    "        )\n",
+    "        case.add_ticket(t)\n",
+    "\n",
+    "    assert len(case.tickets) == 100\n",
+    "    assert case.total_compensation.amount == 1000.0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6ed6400",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_money_addition_different_currencies():\n",
+    "    m1 = Money(amount=100, currency='THB')\n",
+    "    m2 = Money(amount=10, currency='USD')\n",
+    "\n",
+    "    with pytest.raises(ValueError, match='Cannot add different currencies'):\n",
+    "        m1.add(m2)\n",
+    "\n",
+    "def test_tracking_number_trimming():\n",
+    "    tn = TrackingNumber(value='  TH12345  ')\n",
+    "\n",
+    "    assert tn.value == 'TH12345'\n",
+    "\n",
+    "def test_ticket_id_trimming():\n",
+    "    ticket_id=TicketId(value=f'  TKT-234  ')\n",
+    "\n",
+    "    assert ticket_id.value == 'TKT-234'\n",
+    "\n",
+    "def test_repository_handles_nan_amount():\n",
+    "    import numpy as np\n",
+    "    raw_amount = np.nan\n",
+    "\n",
+    "    processed_amount = 0 if pd.isna(raw_amount) else raw_amount\n",
+    "    money = Money(amount=processed_amount, currency='THB')\n",
+    "\n",
+    "    assert money.amount == 0.0"
    ]
   }
  ],
